my-apps/practice/radar-practice-int/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radar-practice
  labels:
    delivery.vanillax.dev/weights: git
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-internal-technitium
    namespace: gateway
    sectionName: https
  hostnames:
  - radar-practice-int.vanillax.me
  rules:
  - backendRefs:
    - name: radar-api
      port: 8080
      weight: 1
